--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body#contact {
 	}
 	
 	#mainnav a:hover {
-		color: #cd6a51;
+		color: orange;
 		text-decoration:none;
 
 	}
@@ -57,8 +57,8 @@ body#contact {
 	#mainnav a {
 		display: block;
 		
-		font-family: 'TitilliumText22LBold', Arial, Helvetica, sans-serif;
-		font-size: 15px;
+		font-family: Ubuntu, Arial, Helvetica, sans-serif;
+		font-size: 16px;
 		font-weight: normal;
 		color: #ffffff;
 		
@@ -89,4 +89,62 @@ body#contact {
 		height: 2px;
 		background: #ff9900;
 		
-	}
+}
+
+.fa-stack-1x {
+    color:white;
+}
+.hover-facebook:hover {
+   color:#29487d;
+}
+.hover-yt:hover {
+	color:#bb0000;}
+.hover-twitter:hover {
+    color:#00aced;
+}
+
+.icon-gplus{
+    color:#dd4b39;
+}
+
+.card{
+	width: 30%;
+	margin-left: 58%;
+	margin-bottom: 5%;
+	margin-top: 16%;
+}
+.intro-box{
+	margin: 1% auto;
+		background-image: url("assets/card.jpg");
+		    background-size: 390px 200px;
+		    color: #ffffff;
+	text-align: center;
+}
+.intro{
+	padding: 2%;
+	height: 200px;
+
+	
+}
+
+.contact-links{
+	border-radius: 0 0 2% 2%;
+	background: #ffffff; 
+
+}
+.links{
+	display: inline-block;
+	padding: 1%;
+	margin: 3%;
+}
+div.links:hover{
+	opacity: 1.3;
+}
+i{
+	color: #141F3D;
+}
+.name{
+	font-size: 1.7em;
+	font-family: 'Roboto', sans-serif;
+	text-align: center;
+}
